# psm

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
config/: config.py
data/attack_prompts/: liang.json  ours.json  raccon.json  raccon_language.json
data/defense_prompts/: psm_target_gpt_4.1_mini_dataset_system_prompt_leakage.jsonl  psm_target_gpt_4.1_mini_dataset_unnatural_test.jsonl  psm_target_gpt_4o_mini_dataset_system_prompt_leakage.jsonl  psm_target_gpt_4o_mini_dataset_unnatural_test.jsonl  psm_target_gpt_5_mini_dataset_system_prompt_leakage.jsonl  psm_target_gpt_5_mini_dataset_unnatural_test.jsonl  psm_target_gpt_5_nano_dataset_unnatural_test.jsonl
data/victim_prompts/: chatgpt-roles.jsonl  sharegpt-test.jsonl  syntentic-system-prompt.jsonl
experiments/: evaluate_defenses.py
results/: attack_experiment_results_asr_per_prompt.xlsx  experiment_summary.json  per_prompt_results.xlsx
scripts/: download_system_prompt_leakage.py  generate_latex_table.py  generate_utility_table.py
src/: __init__.py  metrics.py  utils.py
src/defense/psm/: psm.py  psm_data_creation.py
